syntax = "proto3";

package fitglue;

option go_package = "github.com/fitglue/server/src/go/pkg/types/pb";

import "google/protobuf/descriptor.proto";
import "google/protobuf/timestamp.proto";
import "standardized_activity.proto";

// Extension for mapping sources to their corresponding destinations (for loop prevention)
extend google.protobuf.EnumValueOptions {
  // Maps an ActivitySource to its corresponding Destination enum name
  // e.g., SOURCE_HEVY has corresponding_destination = "DESTINATION_HEVY"
  string corresponding_destination = 50020;
}

// ActivitySource enum defines where the data originated.
enum ActivitySource {
  SOURCE_UNKNOWN = 0;
  SOURCE_HEVY = 1 [(corresponding_destination) = "DESTINATION_HEVY"];
  SOURCE_FITBIT = 3 [(corresponding_destination) = "DESTINATION_FITBIT"];
  SOURCE_PARKRUN_RESULTS = 4; // Parkrun official results (CREATE mode) - no destination
  SOURCE_FILE_UPLOAD = 5;     // Direct FIT file upload - source only
  SOURCE_STRAVA = 6 [(corresponding_destination) = "DESTINATION_STRAVA"];
  SOURCE_GARMIN = 7;
  SOURCE_APPLE_HEALTH = 8;
  SOURCE_HEALTH_CONNECT = 9;
  SOURCE_OURA = 10;
  SOURCE_POLAR = 11;
  SOURCE_WAHOO = 12;
  SOURCE_INTERVALS = 13 [(corresponding_destination) = "DESTINATION_INTERVALS"];
  SOURCE_TRAININGPEAKS = 14 [(corresponding_destination) = "DESTINATION_TRAININGPEAKS"];
  SOURCE_GOOGLESHEETS = 15 [(corresponding_destination) = "DESTINATION_GOOGLESHEETS"];
  SOURCE_GITHUB = 16 [(corresponding_destination) = "DESTINATION_GITHUB"];
  SOURCE_TEST = 99;
}


// ActivityPayload is the unified message format published to Pub/Sub.
message ActivityPayload {
  ActivitySource source = 1;
  string user_id = 2;      // Internal FitGlue User ID
  google.protobuf.Timestamp timestamp = 3;
  string original_payload_json = 4; // Raw JSON payload stringified (flexible but preserved)
  map<string, string> metadata = 5; // Extra tracing context
  StandardizedActivity standardized_activity = 6;

  // Execution tracing
  optional string pipeline_execution_id = 7;
  optional string activity_id = 8;  // FitGlue activity ID (set after initial processing)
  optional string pipeline_id = 9;  // Pipeline that processed this activity

  // Resume mode for delayed enrichment (e.g., Parkrun results)
  bool is_resume = 10;                          // Bypasses processed check, signals UPDATE mode
  repeated string resume_only_enrichers = 11;   // Only run these enrichers (others skipped)
  bool use_update_method = 12;                  // Destinations use UPDATE not CREATE
  optional string resume_pending_input_id = 13; // The pending input that triggered this resume

  // Loop prevention for destination-originated activities
  optional string origin_destination = 14;      // If set (e.g., "hevy"), prevents re-upload to same destination
}
